--- a/reviewboard/static/rb/css/ui/banners.less
+++ b/reviewboard/static/rb/css/ui/banners.less
@@ -112,6 +112,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 @banner-padding;
+    position: relative;
 
     .-has-draft & {
       background: @draft-color;
@@ -309,6 +310,7 @@
 
     &__review {
       padding: 0;
+      z-index: @z-index-menu;
     }
   }
 });
